# raccoon-otel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  planning.md  readme.md
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
demo/: Cargo.toml
demo/src/: main.rs
src/: env.rs  guard.rs  lib.rs  options.rs  re_exports.rs  resource.rs  subscriber.rs
src/providers/: logger.rs  mod.rs  tracer.rs
